--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 				<div class="col-md-6 d-flex align-items-center">
 					<form name="submit-to-google-sheet" class="subscribe-form">
 						<div class="form-group d-flex">
-							<input type="email" class="form-control" placeholder="Enter email address" required>
+							<input name = "email" type="email" class="form-control" placeholder="Enter email address" required>
 							<input type="submit" value="Subscribe" class="submit px-3">
 						</div>
 					</form>
@@ -327,6 +327,8 @@
 	<script src="js/scrollax.min.js"></script>
 	<script src="js/main.js"></script>
 
+
+	
 	<script>
 		const scriptURL = 'https://script.google.com/a/cadenbrown.com/macros/s/AKfycbyruuR12dC0QB-V4FvGk5Urq5Dx9Qwe8ECxD3P2J5-BG4zsUS8/exec'
 		const form = document.forms['submit-to-google-sheet']
