--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
 				<div class="col-md-6 d-flex align-items-center">
 					<form name="submit-to-google-sheet" class="subscribe-form">
 						<div class="form-group d-flex">
-							<input name = "email" type="email" class="form-control" placeholder="Enter email address" required>
+							<input name="email" type="email" class="form-control" placeholder="Enter email address" required>
+							<input name="type" type="hidden" value="newsletter">
 							<input type="submit" value="Subscribe" class="submit px-3">
 						</div>
 					</form>
