--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,7 @@
             <div class="form-group">
               <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
             </div>
+            <input name="type" type="hidden" value="contactform">
           </form>
 
         </div>
