Fixed nav links

--- a/shop.html
+++ b/shop.html
@@ -95,7 +95,7 @@
 					<form action="#" class="subscribe-form">
 						<div class="form-group d-flex">
 							<input name="email" type="email" class="form-control" placeholder="Enter email address" required>
-							<input name="type" type="hidden" value="newsletter">
+							<input name="type" type="hidden" value="comingsoon">
 							<input type="submit" value="Subscribe" class="submit px-3">
 						</div>
 					</form>
