--- a/shop.html
+++ b/shop.html
@@ -29,6 +29,17 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172471671-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-172471671-1');
+	</script>
+
 </head>
 
 <body class="goto-here">
@@ -89,12 +100,14 @@
 			<div class="row d-flex justify-content-center py-5">
 				<div class="col-md-6">
 					<h2 style="font-size: 22px;" class="mb-0">Coming Soon</h2>
-					<span>This service is coming soon to your area. Please enter your email adress to be notified when the service becomes available.</span>
+					<span>This service is coming soon to your area. Please enter your email adress to be notified when
+						the service becomes available.</span>
 				</div>
 				<div class="col-md-6 d-flex align-items-center">
 					<form action="#" class="subscribe-form">
 						<div class="form-group d-flex">
-							<input name="email" type="email" class="form-control" placeholder="Enter email address" required>
+							<input name="email" type="email" class="form-control" placeholder="Enter email address"
+								required>
 							<input name="type" type="hidden" value="comingsoon">
 							<input type="submit" value="Subscribe" class="submit px-3">
 						</div>
