--- a/about.html
+++ b/about.html
@@ -97,14 +97,14 @@
   <section class="ftco-section ftco-no-pb ftco-no-pt bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center"
+        <!-- <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center"
           style="background-image: url(images/about.jpg);">
           <a href="https://vimeo.com/45830194"
             class="icon popup-vimeo d-flex justify-content-center align-items-center">
             <span class="icon-play"></span>
           </a>
-        </div>
-        <div class="col-md-7 py-5 wrap-about pb-md-5 ftco-animate">
+        </div> -->
+        <div class="col-md-12 py-5 wrap-about pb-md-5 ftco-animate">
           <div class="heading-section-bold mb-4 mt-md-5">
             <div class="ml-md-0">
               <h2 class="mb-4">Welcome to Maile Mākeke an eCommerce website</h2>
@@ -117,7 +117,7 @@
             <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy
               Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they
               abused her for their.</p>
-            <p><a href="#" class="btn btn-primary">Shop now</a></p>
+            <p><a href="shop.html" class="btn btn-primary">Shop now</a></p>
           </div>
         </div>
       </div>
@@ -316,10 +316,9 @@
           <div class="ftco-footer-widget mb-4 ml-md-5">
             <h2 class="ftco-heading-2">Menu</h2>
             <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block">Shop</a></li>
-              <li><a href="#" class="py-2 d-block">About</a></li>
-
-              <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+              <li><a href="shop.html" class="py-2 d-block">Shop</a></li>
+              <li><a href="about.html" class="py-2 d-block">About</a></li>
+              <li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
             </ul>
           </div>
         </div>
@@ -333,7 +332,7 @@
               </ul>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">FAQs</a></li>
-                <li><a href="#" class="py-2 d-block">Contact</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
           </div>
