Started filling information

--- a/about.html
+++ b/about.html
@@ -107,16 +107,20 @@
         <div class="col-md-12 py-5 wrap-about pb-md-5 ftco-animate">
           <div class="heading-section-bold mb-4 mt-md-5">
             <div class="ml-md-0">
-              <h2 class="mb-4">Welcome to Maile Mākeke an eCommerce website</h2>
+              <h2 class="mb-4">Welcome to Maile Mākeke! A website for locally sourced products</h2>
             </div>
           </div>
           <div class="pb-md-5">
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-              blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
-              ocean.</p>
-            <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy
-              Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they
-              abused her for their.</p>
+            <p>We are a delivery service bringing local produce and products straight to your doorstep! For hundreds of
+              years ancient hawaiians used the land to sustain their communities and its ohanas. We want to continue
+              this tradition by inviting the community to support local farmers and businesses.</p>
+            <p>What does Maile Mākeke mean?
+              “Maile” is a vine that is endemic to the islands of hawaii. Maile is most commonly used in hawaiian lei to
+              represent love, respect, endurance, and devotion. Mākeke is the hawaiian word for market, as we want to
+              create a stress free and online produce market. Like a vine, our company is a connection between farmers
+              and ohana. We grow and spread our vines throughout the community to deliver fresh and healthy produce. By
+              partnering with these businesses we can create a more sustainable and community driven island.
+            </p>
             <p><a href="shop.html" class="btn btn-primary">Shop now</a></p>
           </div>
         </div>
@@ -139,102 +143,6 @@
               <input type="submit" value="Subscribe" class="submit px-3">
             </div>
           </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-  <section class="ftco-section testimony-section">
-    <div class="container">
-      <div class="row justify-content-center mb-5 pb-3">
-        <div class="col-md-7 heading-section ftco-animate text-center">
-          <span class="subheading">Testimony</span>
-          <h2 class="mb-4">Our satisfied customer says</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-            blind texts. Separated they live in</p>
-        </div>
-      </div>
-      <div class="row ftco-animate">
-        <div class="col-md-12">
-          <div class="carousel-testimony owl-carousel">
-            <div class="item">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text text-center">
-                  <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Garreth Smith</p>
-                  <span class="position">Marketing Manager</span>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-5" style="background-image: url(images/person_2.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text text-center">
-                  <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Garreth Smith</p>
-                  <span class="position">Interface Designer</span>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-5" style="background-image: url(images/person_3.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text text-center">
-                  <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Garreth Smith</p>
-                  <span class="position">UI Designer</span>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text text-center">
-                  <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Garreth Smith</p>
-                  <span class="position">Web Developer</span>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text text-center">
-                  <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Garreth Smith</p>
-                  <span class="position">System Analyst</span>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -342,10 +250,6 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">123 Any St. Honolulu,
-                    Hawaii, USA</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1.808.555.1234
-                    </span></a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
                       class="text">mailemakeke@gmail.com</span></a></li>
               </ul>
