--- a/shop.html
+++ b/shop.html
@@ -129,11 +129,11 @@
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Maile Mākeke</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+						<p>Enjoy the goodness of Hawaiʻi-grown produce, brought to you from dirt to doorstep.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://twitter.com/MaileMakeke"><span class="icon-twitter"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/maile.makeke"><span class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.instagram.com/mailemakeke/"><span class="icon-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -143,7 +143,6 @@
 						<ul class="list-unstyled">
 							<li><a href="shop.html" class="py-2 d-block">Shop</a></li>
 							<li><a href="about.html" class="py-2 d-block">About</a></li>
-
 							<li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
 						</ul>
 					</div>
@@ -153,7 +152,6 @@
 						<h2 class="ftco-heading-2">Help</h2>
 						<div class="d-flex">
 							<ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-
 								<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
 								<li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
 							</ul>
