--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
 						<div class="col-md-12 ftco-animate text-center">
-							<h1 class="mb-2">We serve Fresh Vegestables &amp; Fruits</h1>
+							<h1 class="mb-2">We Deliver Straight from Local Farms</h1>
 							<h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-							<p><a href="#" class="btn btn-primary">View Details</a></p>
+							<p><a href="shop.html" class="btn btn-primary">Shop Now</a></p>
 						</div>
 
 					</div>
@@ -106,9 +106,9 @@
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
 						<div class="col-sm-12 ftco-animate text-center">
-							<h1 class="mb-2">100% Fresh &amp; Organic Foods</h1>
-							<h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-							<p><a href="#" class="btn btn-primary">View Details</a></p>
+							<h1 class="mb-2">100% Fresh &amp; Local Produce</h1>
+							<h2 class="subheading mb-4">We Deliver Straight from Local Farms</h2>
+							<p><a href="shop.html" class="btn btn-primary">Shop Now</a></p>
 						</div>
 
 					</div>
@@ -178,7 +178,7 @@
 								style="background-image: url(images/category.jpg);">
 								<div class="text text-center">
 									<h2>Vegetables</h2>
-									<p>Protect the health of every home</p>
+									<p>Stay healthy and support Hawaiʻi’s farmers</p>
 									<p><a href="shop.html" class="btn btn-primary">Shop now</a></p>
 								</div>
 							</div>
@@ -251,11 +251,11 @@
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Maile Mākeke</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+						<p>Enjoy the goodness of Hawaiʻi-grown produce, brought to you from dirt to doorstep.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://twitter.com/MaileMakeke"><span class="icon-twitter"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/maile.makeke"><span class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.instagram.com/mailemakeke/"><span class="icon-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -274,7 +274,6 @@
 						<h2 class="ftco-heading-2">Help</h2>
 						<div class="d-flex">
 							<ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-
 								<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
 								<li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
 							</ul>
