--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
               <span class="text"></span>
             </div>
             <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-              <span class="text">3-5 Business days delivery &amp; Free Returns</span>
+              
             </div>
           </div>
         </div>
@@ -72,11 +72,11 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="shop.html" class="nav-link">Shop</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+					<li class="nav-item"><a href="shop.html" class="nav-link">Shop</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+					<li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="premium.html" class="nav-link">Premium</a></li>
         </ul>
       </div>
     </div>
