--- a/premium.html
+++ b/premium.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
-	<!-- <link rel="stylesheet" href="css/aos.css"> -->
+	<link rel="stylesheet" href="css/aos.css">
 
 	<link rel="stylesheet" href="css/ionicons.min.css">
 
@@ -55,7 +55,7 @@
 							<span class="text"></span>
 						</div>
 						<div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-							<span class="text"></span>
+							
 						</div>
 					</div>
 				</div>
@@ -72,165 +72,43 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="shop.html" class="nav-link">Shop</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-					<li class="nav-item"><a href="premium.html" class="nav-link">Premium</a></li>
+					<li class="nav-item active"><a href="premium.html" class="nav-link">Premium</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<!-- END nav -->
 
-	<section id="home-section" class="hero">
-		<div class="home-slider owl-carousel">
-			<div class="slider-item" style="background-image: url(images/bg_1.jpg);">
-				<div class="overlay"></div>
-				<div class="container">
-					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-						<div class="col-md-12 ftco-animate text-center">
-							<h1 class="mb-2">We Deliver Straight from Local Farms</h1>
-							<h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-							<p><a href="shop.html" class="btn btn-primary">Shop Now</a></p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-
-			<div class="slider-item" style="background-image: url(images/bg_2.jpg);">
-				<div class="overlay"></div>
-				<div class="container">
-					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-						<div class="col-sm-12 ftco-animate text-center">
-							<h1 class="mb-2">100% Fresh &amp; Local Produce</h1>
-							<h2 class="subheading mb-4">We Deliver Straight from Local Farms</h2>
-							<p><a href="shop.html" class="btn btn-primary">Shop Now</a></p>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section">
+	<div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
 		<div class="container">
-			<div class="row no-gutters ftco-services">
-				<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-					<div class="media block-6 services mb-md-0 mb-4">
-						<div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
-							<span class="flaticon-shipped"></span>
-						</div>
-						<div class="media-body">
-							<h3 class="heading">Free Shipping</h3>
-							<span>On order over $100</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-					<div class="media block-6 services mb-md-0 mb-4">
-						<div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
-							<span class="flaticon-diet"></span>
-						</div>
-						<div class="media-body">
-							<h3 class="heading">Always Fresh</h3>
-							<span>Product well package</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-					<div class="media block-6 services mb-md-0 mb-4">
-						<div class="icon bg-color-3 d-flex justify-content-center align-items-center mb-2">
-							<span class="flaticon-award"></span>
-						</div>
-						<div class="media-body">
-							<h3 class="heading">Superior Quality</h3>
-							<span>Quality Products</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-					<div class="media block-6 services mb-md-0 mb-4">
-						<div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
-							<span class="flaticon-customer-service"></span>
-						</div>
-						<div class="media-body">
-							<h3 class="heading">Support</h3>
-							<span>24/7 Support</span>
-						</div>
-					</div>
+			<div class="row no-gutters slider-text align-items-center justify-content-center">
+				<div class="col-md-9 ftco-animate text-center">
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Premium</span>
+					</p>
+					<h1 class="mb-0 bread">Premium</h1>
 				</div>
 			</div>
 		</div>
-	</section>
-
-	<section class="ftco-section ftco-category ftco-no-pt">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8">
-					<div class="row">
-						<div class="col-md-6 order-md-last align-items-stretch d-flex">
-							<div class="category-wrap-2 ftco-animate img align-self-stretch d-flex"
-								style="background-image: url(images/category.jpg);">
-								<div class="text text-center">
-									<h2>Local Produce</h2>
-									<p>Stay healthy and support Hawaiʻi’s farmers</p>
-									<p><a href="shop.html" class="btn btn-primary">Shop now</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
-								style="background-image: url(images/category-1.jpg);">
-								<div class="text px-3 py-1">
-									<h2 class="mb-0"><a href="shop.html">Fruits</a></h2>
-								</div>
-							</div>
-							<div class="category-wrap ftco-animate img d-flex align-items-end"
-								style="background-image: url(images/category-2.jpg);">
-								<div class="text px-3 py-1">
-									<h2 class="mb-0"><a href="shop.html">Vegetables</a></h2>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
-						style="background-image: url(images/category-3.jpg);">
-						<div class="text px-3 py-1">
-							<h2 class="mb-0"><a href="shop.html">Juices</a></h2>
-						</div>
-					</div>
-					<div class="category-wrap ftco-animate img d-flex align-items-end"
-						style="background-image: url(images/category-4.jpg);">
-						<div class="text px-3 py-1">
-							<h2 class="mb-0"><a href="shop.html">Dried</a></h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	</div>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
 		<div class="container py-4">
 			<div class="row d-flex justify-content-center py-5">
 				<div class="col-md-6">
-					<h2 style="font-size: 22px;" class="mb-0">Subcribe to our Newsletter</h2>
-					<span>Get e-mail updates about our latest shops and special offers</span>
+					<h2 style="font-size: 22px;" class="mb-0">Coming Soon</h2>
+					<span>This service is coming soon to your area. Please enter your email adress to be notified when
+						the service becomes available.</span>
 				</div>
 				<div class="col-md-6 d-flex align-items-center">
-					<form name="submit-to-google-sheet" class="subscribe-form">
+					<form action="#" class="subscribe-form">
 						<div class="form-group d-flex">
 							<input name="email" type="email" class="form-control" placeholder="Enter email address"
 								required>
-							<input name="type" type="hidden" value="newsletter">
+							<input name="type" type="hidden" value="comingsoonpremium">
 							<input type="submit" value="Subscribe" class="submit px-3">
 						</div>
 					</form>
@@ -334,8 +212,6 @@
 	<script src="js/bootstrap-datepicker.js"></script>
 	<script src="js/scrollax.min.js"></script>
 	<script src="js/main.js"></script>
-
-
 
 	<script>
 		const scriptURL = 'https://script.google.com/a/cadenbrown.com/macros/s/AKfycbyruuR12dC0QB-V4FvGk5Urq5Dx9Qwe8ECxD3P2J5-BG4zsUS8/exec'
