Fixed mail forms

--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
 							<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
 								style="background-image: url(images/category-1.jpg);">
 								<div class="text px-3 py-1">
-									<h2 class="mb-0"><a href="shop.html">Fruits</a></h2>
+									<h2 class="mb-0"><a href="shop.html">Vegetables</a></h2>
 								</div>
 							</div>
 							<div class="category-wrap ftco-animate img d-flex align-items-end"
 								style="background-image: url(images/category-2.jpg);">
 								<div class="text px-3 py-1">
-									<h2 class="mb-0"><a href="shop.html">Vegetables</a></h2>
+									<h2 class="mb-0"><a href="shop.html">Fruit</a></h2>
 								</div>
 							</div>
 						</div>
@@ -273,12 +273,7 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Help</h2>
 						<div class="d-flex">
-							<ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-								<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-								<li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
-							</ul>
 							<ul class="list-unstyled">
-								<li><a href="#" class="py-2 d-block">FAQs</a></li>
 								<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
 							</ul>
 						</div>
@@ -289,7 +284,7 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><a href="#"><span class="icon icon-envelope"></span><span
+								<li><a href="mailto:mailemakeke@gmail.com"><span class="icon icon-envelope"></span><span
 											class="text">mailemakeke@gmail.com</span></a></li>
 							</ul>
 						</div>
