--- a/contact.html
+++ b/contact.html
@@ -98,17 +98,8 @@
     <div class="container">
       <div class="row d-flex mb-5 contact-info">
         <div class="w-100"></div>
-        <div class="col-md-3 d-flex">
-          <div class="info bg-white p-4">
-            <p><span>Address:</span><br />123 Any St.<br />Honolulu,
-              Hawaii 96795</p>
-          </div>
-        </div>
-        <div class="col-md-3 d-flex">
-          <div class="info bg-white p-4">
-            <p><span>Phone:</span><br /><a href="tel://18085551234">+1.808.555.1234</a></p>
-          </div>
-        </div>
+        
+        
         <div class="col-md-3 d-flex">
           <div class="info bg-white p-4">
             <p><span>Email:</span><br /><a href="mailto:mailemakeke@gmail.com">mailemakeke@gmail.com</a></p>
@@ -177,12 +168,7 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Help</h2>
 						<div class="d-flex">
-							<ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-								<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-								<li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
-							</ul>
 							<ul class="list-unstyled">
-								<li><a href="#" class="py-2 d-block">FAQs</a></li>
 								<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
 							</ul>
 						</div>
@@ -193,7 +179,7 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><a href="#"><span class="icon icon-envelope"></span><span
+								<li><a href="mailto:mailemakeke@gmail.com"><span class="icon icon-envelope"></span><span
 											class="text">mailemakeke@gmail.com</span></a></li>
 							</ul>
 						</div>
