--- a/shop.html
+++ b/shop.html
@@ -104,7 +104,7 @@
 						the service becomes available.</span>
 				</div>
 				<div class="col-md-6 d-flex align-items-center">
-					<form action="#" class="subscribe-form">
+					<form name="submit-to-google-sheet" class="subscribe-form">
 						<div class="form-group d-flex">
 							<input name="email" type="email" class="form-control" placeholder="Enter email address"
 								required>
@@ -151,12 +151,7 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Help</h2>
 						<div class="d-flex">
-							<ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-								<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-								<li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
-							</ul>
 							<ul class="list-unstyled">
-								<li><a href="#" class="py-2 d-block">FAQs</a></li>
 								<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
 							</ul>
 						</div>
@@ -167,7 +162,7 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><a href="#"><span class="icon icon-envelope"></span><span
+								<li><a href="mailto:mailemakeke@gmail.com"><span class="icon icon-envelope"></span><span
 											class="text">mailemakeke@gmail.com</span></a></li>
 							</ul>
 						</div>
