--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 							<span class="flaticon-shipped"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Free Shipping</h3>
-							<span>On order over $100</span>
+							<h3 class="heading">Free delivery</h3>
+							<span>With Premium</span>
 						</div>
 					</div>
 				</div>
@@ -137,8 +137,8 @@
 							<span class="flaticon-diet"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Always Fresh</h3>
-							<span>Product well package</span>
+							<h3 class="heading">Always fresh</h3>
+							<span>Never Frozen</span>
 						</div>
 					</div>
 				</div>
@@ -148,8 +148,8 @@
 							<span class="flaticon-award"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Superior Quality</h3>
-							<span>Quality Products</span>
+							<h3 class="heading">Always local</h3>
+							<span>Quality Produce</span>
 						</div>
 					</div>
 				</div>
@@ -159,8 +159,8 @@
 							<span class="flaticon-customer-service"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Support</h3>
-							<span>24/7 Support</span>
+							<h3 class="heading">On the job</h3>
+							<span>8:30am–8:30pm</span>
 						</div>
 					</div>
 				</div>
@@ -343,6 +343,7 @@
 				.catch(error => console.error('Error!', error.message))
 		})
 	</script>
+
 
 </body>
 
