--- a/premium.html
+++ b/premium.html
@@ -55,7 +55,7 @@
 							<span class="text"></span>
 						</div>
 						<div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-							
+
 						</div>
 					</div>
 				</div>
@@ -100,8 +100,13 @@
 			<div class="row d-flex justify-content-center py-5">
 				<div class="col-md-6">
 					<h2 style="font-size: 22px;" class="mb-0">Coming Soon</h2>
-					<span>This service is coming soon to your area. Please enter your email adress to be notified when
-						the service becomes available.</span>
+					<span>Premium includes:
+						<ul>
+							<li>Free delivery</li>
+							<li>A free t-shirt with your first order</li>
+							<li>Once-a-month 10% discount</li>
+							<li>Your first order 20% off</li>
+						</ul></span>
 				</div>
 				<div class="col-md-6 d-flex align-items-center">
 					<form name="submit-to-google-sheet" class="subscribe-form">
@@ -109,7 +114,7 @@
 							<input name="email" type="email" class="form-control" placeholder="Enter email address"
 								required>
 							<input name="type" type="hidden" value="comingsoonpremium">
-							<input type="submit" value="Subscribe" class="submit px-3">
+							<input type="submit" value="Notify Me" class="submit px-3">
 						</div>
 					</form>
 				</div>
@@ -131,9 +136,12 @@
 						<h2 class="ftco-heading-2">Maile Mākeke</h2>
 						<p>Enjoy the goodness of Hawaiʻi-grown produce, brought to you from dirt to doorstep.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="https://twitter.com/MaileMakeke"><span class="icon-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.facebook.com/maile.makeke"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.instagram.com/mailemakeke/"><span class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://twitter.com/MaileMakeke"><span
+										class="icon-twitter"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/maile.makeke"><span
+										class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.instagram.com/mailemakeke/"><span
+										class="icon-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
