--- a/shop.html
+++ b/shop.html
@@ -109,7 +109,7 @@
 							<input name="email" type="email" class="form-control" placeholder="Enter email address"
 								required>
 							<input name="type" type="hidden" value="comingsoon">
-							<input type="submit" value="Subscribe" class="submit px-3">
+							<input type="submit" value="Notify Me" class="submit px-3">
 						</div>
 					</form>
 				</div>
